--- a/report/conclusioni.tex
+++ b/report/conclusioni.tex
@@ -4,6 +4,6 @@ Sulle due applicazioni sono stati eseguiti diversi \textit{test} e possiamo affe
 		\item Se la canzone è troppo veloce, cioè ha un tempo o BPM (battiti per minuto) alto, la predizione tende ad essere errata;
 		\item Alcune note potrebbero non essere riconosciute perchè c'è ancora un margine di errore di quasi il 10\%.
 	\end{itemize}
-Nonostante ciò, siamo molto soddisfatti del progetto che è stato realizzato. Siamo consapevoli che abbiamo esplorato solo una piccola parte di questa vastissima materia ma quello che abbiamo appreso sarà sicuramente usato come base di partenza per progetti futuri.\\
+Nonostante ciò, siamo molto soddisfatti del progetto che è stato realizzato. Grazie a questa materia abbiamo esplorato due mondi che per noi erano sconosciuti come lo sviluppo di applicazioni \textit{mobile}. Siamo consapevoli che abbiamo perlustrato solo una piccola parte di questa vastissima materia ma quello che abbiamo appreso sarà sicuramente usato come base di partenza per progetti futuri.\\
 \newline
 A fini dimostrativi, forniamo insieme alla documentazione due brevi video delle applicazioni in funzione.
