--- a/report/capIV.tex
+++ b/report/capIV.tex
@@ -67,7 +67,7 @@ Di conseguenza, vedremo solo due volte il tasto "3":
 	\includegraphics[scale=0.28]{./images/img24.png}
 \end{figure}
 \subsection{Implementazione di Tensorflow Lite}
-Una volta ottenuti gli \textit{input} della rete possiamo eseguire l'inferenza con il modello. Inanzitutto rendiamo accessibile l'interprete di \textit{Tensorflow Lite}, allochiamo i tensori ed estrapoliamo dal modello rispettivamente il tipo e il formato dell'\textit{input} e dell'\textit{output}.\\ Solo i \textit{frame} più significativi verranno dati in \textit{input} all'interprete tramite la funzione \textit{interpreter.set\_tensor()}. Una volta che vengono definite le dimensione dell'\textit{input} e allocati i tensori, invochiamo l'interprete e tramite la funzione \textit{interpreter.get\_tensor()} otteniamo una copia dei valori provenienti dal tensore di \textit{output}. Infine, i risultati vengono salvati in un \textit{JSON} e conservati nel \textit{database} dell'applicazione.
+Una volta ottenuti gli \textit{input} della rete possiamo eseguire l'inferenza con il modello. Inanzitutto rendiamo accessibile l'interprete di \textit{Tensorflow Lite}, allochiamo i tensori ed estrapoliamo dal modello rispettivamente il tipo e il formato dell'\textit{input} e dell'\textit{output}.\\ Solo i \textit{frame} più significativi verranno dati in \textit{input} all'interprete tramite la funzione \textit{interpreter.set\_tensor()}. Una volta che vengono definite la dimensione dell'\textit{input} e allocati i tensori, invochiamo l'interprete e tramite la funzione \textit{interpreter.get\_tensor()} otteniamo una copia dei valori provenienti dal tensore di \textit{output}. Infine, i risultati vengono salvati in un \textit{JSON} e conservati nel \textit{database} dell'applicazione.
 \vspace*{2ex}
 \pythonexternal{./codes/predict.py}
 \section{Sviluppo applicazione iOS}
@@ -167,7 +167,7 @@ Per utilizzare il nostro modello \textit{TensorFlow Lite} all'interno dell'appli
 \vspace*{2ex}
 \noindent Per eseguire l'inferenza è necessario effettuare delle trasformazioni sui dati che sono obbligatorie per poterli dare in ingresso al modello. L'\textit{input} della rete deve essere un oggetto \textit{Data} al cui interno sono presenti i dati dell'\textit{array} contenente le immagini del \textit{file} audio (\textit{inputImages}).\\
 A questo punto si allocano i tensori, si inserisce l'\textit{input} nella rete e si chiama il metodo \textit{invoke()}.
-È possibile ottenere il tensore di \textit{output} chiamando il metodo \textit{output(at:)} e gli elementi ottenuti dalla predizione tramite \textit{output.data.copyBytes}. Inoltre, si può notare che ci sono due cicli: quello esterno serve per leggersi tutte le immagini della registrazione mentre il secondo funge da \textit{check} per verificare che l'immagine corrisponda a uno di quei picchi di cui abbiamo parlato in precedenza.
+È possibile ottenere il tensore di \textit{output} chiamando il metodo \textit{output(at:)} e gli elementi ottenuti dalla predizione tramite \textit{output.data.copyBytes()}. Inoltre, si può notare che ci sono due cicli: quello esterno serve per leggersi tutte le immagini della registrazione mentre il secondo funge da \textit{check} per verificare che l'immagine corrisponda a uno di quei picchi di cui abbiamo parlato in precedenza.
 \vspace*{2ex}
 \swiftexternal{./codes/tensorflowLiteIos2.swift}
 \subsection{Installazione su dispositivo fisico}
